Simlify project into single file Implement generic apikey auth
